--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -15,9 +15,12 @@ services:
 
     image: liminal_spl_05
 
+    mem_limit: 4g
+    
     volumes:
       # Update this to wherever you want VS Code to mount the folder of your project
       - /Users/efrain/projects/SPL_UD_DL:/app
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
 
     # Uncomment the next four lines if you will use a ptrace-based debugger like C++, Go, and Rust.
     # cap_add:
