--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
       args:
-        - MINICONDA_ARCH=aarch64
+        # aarch64
+        - MINICONDA_ARCH=x86_64
         - userns=host
 
     image: liminal_spl_05
@@ -19,7 +20,8 @@ services:
     
     volumes:
       # Update this to wherever you want VS Code to mount the folder of your project
-      - /Users/efrain/projects/SPL_UD_DL:/app
+      # - /Users/efrain/projects/SPL_UD_DL:/app
+      - /home/efrain/Documents/projects/SPL_UD_DL:/app
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
 
     # Uncomment the next four lines if you will use a ptrace-based debugger like C++, Go, and Rust.
